# LightsOut-Math

./: .gitattributes  .gitignore  ABOUT.md  nullities.txt  random_conjectures.md  random_conjectures.txt  requirements.txt
9x9_research/: 37Clicks.txt  9x9MaxMinSearch.py  9x9Types.txt  heatmap.py  highest9x9Clicks.txt
code/: board_linalg.py  board_math.py  board_operations.py  conjectures.py  kernel_generator.py  kernel_size.py  min_click_parabola.ipynb  min_click_ratio.ipynb  min_clicks.py  min_clicks_answers.txt  polynomials.py  region_separator.py  serialize_visualize.py  serializer.py  upper_bounds.py
code/gf2_polynomials/: Cargo.toml
code/gf2_polynomials/src/: gf2_polynomial.rs  lib.rs  test.py
code/serialization/: LightsOut_424_424.lp  LightsOut_594_594.lp  b159257.txt  min_clicks_answers.txt  nullity2_under10000.txt
code/serialization/allOnes/: 100x100_allOnes.p  101x101_allOnes.p  102x102_allOnes.p  103x103_allOnes.p  104x104_allOnes.p  105x105_allOnes.p  106x106_allOnes.p  107x107_allOnes.p  108x108_allOnes.p  109x109_allOnes.p  10x10_allOnes.p  110x110_allOnes.p  111x111_allOnes.p  112x112_allOnes.p  113x113_allOnes.p  (+240 more)
tex/b_factoring/: b_factoring.tex
tex/conjectures/: conjectures.tex
tex/how_to_lightsout/: how_to_lightsout.tex  refs.bib
tex/max_chebyshev_factoring/: max_chebyshev_factoring.tex
tex/n_eigenvalues/: n_eigenvalues.tex
tex/new_chebyshev/: new_chebyshev.tex
tex/new_chebyshev_f1/: new_chebyshev_f1.tex
tex/nullity2/: nullity2.tex  refs.bib
tex/nullity_2n+1/: nullity_2n+1.tex  refs.bib
tex/nullity_b=5/: nullity_b=5.tex
(+606 files in other folders)
